--- a/index.css
+++ b/index.css
@@ -19,12 +19,13 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-shadow: 2px 2px 10px #000;
 }
 
 main {
-    max-width: 34em;
+    width: 40em;
     margin: 0 auto;
-    max-height: 34em;
+    height: 40em;
     background-color: #1F2937;
 
 }
@@ -36,9 +37,9 @@ header, footer {
     /* border: 1px solid #D1D5DB */
 }
 #colorPicker {
-    max-width: 4em;
+    width: 4em;
     border: 0.5px solid #D1D5DB;
-    min-height: 3em;
+    height: 3em;
 }
 #scheme-form {
     width: 100%;
@@ -54,7 +55,7 @@ header, footer {
     align-items: center;
     padding: 0.5em 0.8em;  
     background: #1F293A;
-    max-width: 20em;
+    width: 10em;
     border: 1px solid #D1D5DB;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 6px;
@@ -95,5 +96,36 @@ header, footer {
     width: 20em;
     min-height: 20em;
     max-height: 30em;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
 }
 
+@media (min-width: 768px) {
+    
+    body {
+        align-items: flex-start;
+    }
+
+    main {
+        height: 90vh;
+        width: 90vw;
+    }
+
+    #colorPicker {
+        width: 8rem;
+        height: 8rem;
+    }
+
+    #scheme-select {
+        height: 5rem;   
+        font-size: 2rem;
+    }
+
+    .btn-submit {
+        font-size: 1.5rem;
+    }
+
+    #palette div {
+        min-height: 50vh;
+    }
+}
