--- a/index.css
+++ b/index.css
@@ -19,13 +19,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    text-shadow: 2px 2px 10px #000;
 }
 
 main {
-    width: 40em;
+    max-width: 34em;
     margin: 0 auto;
-    height: 40em;
+    max-height: 34em;
     background-color: #1F2937;
 
 }
@@ -37,9 +36,9 @@ header, footer {
     /* border: 1px solid #D1D5DB */
 }
 #colorPicker {
-    width: 4em;
+    max-width: 4em;
     border: 0.5px solid #D1D5DB;
-    height: 3em;
+    min-height: 3em;
 }
 #scheme-form {
     width: 100%;
@@ -55,7 +54,7 @@ header, footer {
     align-items: center;
     padding: 0.5em 0.8em;  
     background: #1F293A;
-    width: 10em;
+    max-width: 20em;
     border: 1px solid #D1D5DB;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 6px;
@@ -96,36 +95,5 @@ header, footer {
     width: 20em;
     min-height: 20em;
     max-height: 30em;
-    font-size: 1.2rem;
-    letter-spacing: 1px;
 }
 
-@media (min-width: 768px) {
-    
-    body {
-        align-items: flex-start;
-    }
-
-    main {
-        height: 90vh;
-        width: 90vw;
-    }
-
-    #colorPicker {
-        width: 8rem;
-        height: 8rem;
-    }
-
-    #scheme-select {
-        height: 5rem;   
-        font-size: 2rem;
-    }
-
-    .btn-submit {
-        font-size: 1.5rem;
-    }
-
-    #palette div {
-        min-height: 50vh;
-    }
-}
